network_policy/example1/admin-allow-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:  admin-allow-web
  namespace: admin
spec:
  podSelector: 
    matchLabels:
      app: admin
  policyTypes: 
    - Ingress
    #- Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web
          namespaceSelector:
            matchLabels:
              role: frontend
